# map-kit-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml  quality-checks.yaml
scripts/: entrypoint  run
src/: manage.py
src/locations/: admin.py  apps.py  auth.py  helpers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
src/locations/fixtures/: categories.json  communities.json  locations.json  users.json
src/locations/management/commands/: geocode.py
src/locations/migrations/: 0001_initial.py  0002_category_community_remove_location_lat_and_more.py  0002_user_approved.py  0003_community_admin_users.py  0004_category_color.py  0005_alter_community_options_community_path_slug_and_more.py  0006_location_locations_l_geograp_5ec53c_idx.py  0007_alter_community_options.py  0008_alter_location_description.py
src/map_kit/: asgi.py  settings.py  urls.py  wsgi.py
src/tests/: test_communities.py  test_email.py  test_locations.py
